--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,29 @@
     <h1>Choisissez une cagnotte pour contribuer</h1>
     <a class="button" href="https://pots.lydia.me/collect/pots?id=93814-linogravure-st-sulpice-en-fete" target="_blank">Lydia</a>
     <a class="button" href="https://www.paypal.com/qrcodes/p2pqrc/SAHMXC7PFQMTJ" target="_blank">PayPal</a>
-    <a class="button" href="https://share.weropay.eu/p/1/c/bYFm2" target="_blank">Wero</a>
+    <a class="button" <button class="cagnotte" onclick="openModal()">Wero</button>
+<!-- Fenêtre modale pour Wero -->
+<div id="weroModal" style="display: none; position: fixed; top: 0; left: 0;
+  width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 9999;">
+
+  <div style="background: white; padding: 20px; max-width: 400px;
+    margin: 100px auto; border-radius: 10px; text-align: center; position: relative;">
+
+    <span onclick="closeModal()" style="position: absolute; top: 10px; right: 15px;
+      cursor: pointer; font-weight: bold;">&times;</span>
+
+    <p>Pour les virements Wero, voici le numéro de téléphone du bénéficiaire à copier :</p>
+    <p style="font-size: 1.5em; font-weight: bold; color: #d6336c;">0750812934</p>
+  </div>
+</div>
+<script>
+  function openModal() {
+    document.getElementById('weroModal').style.display = 'block';
+  }
+
+  function closeModal() {
+    document.getElementById('weroModal').style.display = 'none';
+  }
+</script>
 </body>
 </html>
