--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Choisissez une cagnotte</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-        a.button {
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        a.button, button.button {
             display: inline-block;
             margin: 15px;
             padding: 15px 25px;
@@ -14,40 +17,44 @@
             background-color: #007BFF;
             color: white;
             text-decoration: none;
+            border: none;
             border-radius: 8px;
+            cursor: pointer;
         }
-        a.button:hover {
+        a.button:hover, button.button:hover {
             background-color: #0056b3;
         }
     </style>
 </head>
 <body>
+
     <h1>Choisissez une cagnotte pour contribuer</h1>
+
     <a class="button" href="https://pots.lydia.me/collect/pots?id=93814-linogravure-st-sulpice-en-fete" target="_blank">Lydia</a>
     <a class="button" href="https://www.paypal.com/qrcodes/p2pqrc/SAHMXC7PFQMTJ" target="_blank">PayPal</a>
-    <a class="button" <button class="cagnotte" onclick="openModal()">Wero</button>
-<!-- Fenêtre modale pour Wero -->
-<div id="weroModal" style="display: none; position: fixed; top: 0; left: 0;
-  width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 9999;">
+    <button class="button" onclick="openModal()">Wero</button>
 
-  <div style="background: white; padding: 20px; max-width: 400px;
-    margin: 100px auto; border-radius: 10px; text-align: center; position: relative;">
+    <!-- Fenêtre modale pour Wero -->
+    <div id="weroModal" style="display: none; position: fixed; top: 0; left: 0;
+        width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 9999;">
+        <div style="background: white; padding: 20px; max-width: 400px;
+            margin: 100px auto; border-radius: 10px; text-align: center; position: relative;">
+            <span onclick="closeModal()" style="position: absolute; top: 10px; right: 15px;
+                cursor: pointer; font-weight: bold;">&times;</span>
+            <p>Pour les virements Wero, voici le numéro de téléphone du bénéficiaire à copier :</p>
+            <p style="font-size: 1.5em; font-weight: bold; color: #d6336c;">0750812934</p>
+        </div>
+    </div>
 
-    <span onclick="closeModal()" style="position: absolute; top: 10px; right: 15px;
-      cursor: pointer; font-weight: bold;">&times;</span>
+    <script>
+        function openModal() {
+            document.getElementById('weroModal').style.display = 'block';
+        }
 
-    <p>Pour les virements Wero, voici le numéro de téléphone du bénéficiaire à copier :</p>
-    <p style="font-size: 1.5em; font-weight: bold; color: #d6336c;">0750812934</p>
-  </div>
-</div>
-<script>
-  function openModal() {
-    document.getElementById('weroModal').style.display = 'block';
-  }
+        function closeModal() {
+            document.getElementById('weroModal').style.display = 'none';
+        }
+    </script>
 
-  function closeModal() {
-    document.getElementById('weroModal').style.display = 'none';
-  }
-</script>
 </body>
 </html>
