--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Choisissez une cagnotte</title>
-  <!-- Import police Anton pour effet style "Poster" Instagram -->
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  <!-- Import police Marcovaldo -->
+  <link href="https://fonts.googleapis.com/css2?family=Marcovaldo&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Anton', sans-serif;
+      font-family: 'Marcovaldo', serif;
       background-color: #fdfaf3; /* crème / ivoire */
-      margin: 20px 30px;
+      margin: 40px 30px 30px 30px; /* plus d'espace en haut */
       padding: 0;
       display: flex;
       flex-direction: column;
@@ -19,14 +19,13 @@
     }
 
     h1 {
-      color: #FF0084; /* rose */
+      color: #FF0084;
       text-align: center;
-      margin-top: 30px;
-      margin-bottom: 25px; /* rapproché de la fenêtre */
-      font-size: 28px; /* taille adaptée */
+      margin-top: 60px; /* descendu pour mobile */
+      margin-bottom: 20px;
+      font-size: 28px;
       line-height: 1.2;
       max-width: 480px;
-      /* Texte sur 3 lignes avec retours forcés */
     }
 
     .button-container {
@@ -42,7 +41,7 @@
 
     a.button,
     button.button {
-      background-color: #556B2F; /* vert */
+      background-color: #556B2F;
       color: white;
       font-size: 26px;
       padding: 25px 0;
@@ -55,20 +54,21 @@
       max-width: 480px;
       box-sizing: border-box;
       transition: background-color 0.3s ease;
-      font-family: 'Anton', sans-serif;
+      font-family: 'Marcovaldo', serif;
+      text-transform: uppercase;
     }
 
     a.button:hover,
     button.button:hover {
-      background-color: #42521f; /* vert foncé hover */
+      background-color: #42521f;
     }
 
     #footer {
-      margin-top: 60px;
+      margin-top: 20px; /* remonté */
       font-size: 18px;
       color: #FF0084;
       text-align: center;
-      font-family: 'Anton', sans-serif;
+      font-family: 'Marcovaldo', serif;
     }
 
     /* Fenêtre modale */
@@ -79,25 +79,26 @@
       width: 100%; height: 100%;
       background-color: rgba(0,0,0,0.5);
       z-index: 9999;
-      padding: 10px; /* petit padding pour mobile */
+      padding: 10px;
       box-sizing: border-box;
     }
 
     #weroModalContent {
       background: white;
-      padding: 20px 25px;
-      max-width: 400px;
-      height: 180px; /* moins haute */
-      margin: 60px auto;
+      padding: 25px 30px;
+      max-width: 320px; /* plus étroit */
+      height: 250px; /* plus haut */
+      margin: 80px auto;
       border-radius: 12px;
       text-align: center;
       position: relative;
-      font-family: 'Anton', sans-serif;
+      font-family: 'Marcovaldo', serif;
       font-size: 18px;
       color: #333;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      text-transform: uppercase; /* majuscule */
     }
 
     #weroModalContent span {
@@ -110,18 +111,18 @@
     }
 
     #weroModalContent p {
-      margin: 6px 0;
+      margin: 8px 0;
     }
 
     #weroModalContent p strong {
-      font-size: 1.8em;
+      font-size: 2em;
       color: #FF0084;
     }
 
     /* Responsive mobile */
     @media (max-width: 500px) {
       body {
-        margin: 10px 15px;
+        margin: 60px 15px 40px 15px;
       }
       h1 {
         font-size: 24px;
@@ -139,15 +140,15 @@
         max-width: 100%;
       }
       #weroModalContent {
-        width: 90vw;
+        width: 80vw;
         max-width: none;
         height: auto;
-        margin: 40px auto;
-        padding: 15px 20px;
+        margin: 50px auto;
+        padding: 20px 15px;
         font-size: 16px;
       }
       #weroModalContent p strong {
-        font-size: 1.5em;
+        font-size: 1.8em;
       }
     }
   </style>
@@ -157,7 +158,7 @@
   <h1>
     Merci pour votre<br />
     Achat !<br />
-    Veuillez sélectionner votre mode de paiement
+    Veuillez sélectionner<br />votre mode de paiement
   </h1>
 
   <div class="button-container">
@@ -180,10 +181,8 @@
   <div id="weroModal">
     <div id="weroModalContent">
       <span onclick="closeModal()">&times;</span>
-      <p>
-        Pour les virements Wero, voici le numéro de téléphone du bénéficiaire
-        à copier :
-      </p>
+      <p>POUR LES VIREMENTS WERO,</p>
+      <p>VOICI LE NUMÉRO DE TÉLÉPHONE DU BÉNÉFICIAIRE À COPIER :</p>
       <p><strong>0750812934</strong></p>
     </div>
   </div>
@@ -201,4 +200,3 @@
   </script>
 </body>
 </html>
-
