--- a/Index.html
+++ b/Index.html
@@ -3,55 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <title>Choisissez une cagnotte</title>
-  <!-- Import police Marcovaldo -->
+  <!-- Police Marcovaldo -->
   <link href="https://fonts.googleapis.com/css2?family=Marcovaldo&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Marcovaldo', serif;
-      background-color: #fdfaf3; /* crème / ivoire */
-      margin: 40px 30px 30px 30px; /* plus d'espace en haut */
+      background-color: #fdfaf3;
+      margin: 0;
       padding: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
+      position: relative;
       box-sizing: border-box;
     }
 
     h1 {
       color: #FF0084;
       text-align: center;
-      margin-top: 60px; /* descendu pour mobile */
-      margin-bottom: 20px;
+      margin-top: 160px; /* descendu très bas */
+      margin-bottom: 40px;
       font-size: 28px;
-      line-height: 1.2;
-      max-width: 480px;
+      line-height: 1.3;
+      max-width: 90%;
     }
 
     .button-container {
       display: flex;
       flex-direction: column;
-      gap: 40px;
       align-items: center;
+      gap: 60px;
       width: 100%;
-      max-width: 480px;
-      flex-grow: 1;
-      justify-content: center;
     }
 
     a.button,
     button.button {
       background-color: #556B2F;
       color: white;
-      font-size: 26px;
-      padding: 25px 0;
+      font-size: 28px;
+      padding: 60px 0; /* très haut */
       text-align: center;
       text-decoration: none;
       border-radius: 12px;
       border: none;
       cursor: pointer;
-      width: 100%;
-      max-width: 480px;
+      width: 70vw; /* très étroit */
+      max-width: 300px;
       box-sizing: border-box;
       transition: background-color 0.3s ease;
       font-family: 'Marcovaldo', serif;
@@ -64,7 +62,8 @@
     }
 
     #footer {
-      margin-top: 20px; /* remonté */
+      position: absolute;
+      bottom: 60px; /* bien remonté */
       font-size: 18px;
       color: #FF0084;
       text-align: center;
@@ -85,20 +84,21 @@
 
     #weroModalContent {
       background: white;
-      padding: 25px 30px;
-      max-width: 320px; /* plus étroit */
-      height: 250px; /* plus haut */
-      margin: 80px auto;
+      padding: 30px 20px;
+      width: 70vw; /* étroit */
+      max-width: 300px;
+      height: 350px; /* très haut */
+      margin: 100px auto;
       border-radius: 12px;
       text-align: center;
       position: relative;
       font-family: 'Marcovaldo', serif;
-      font-size: 18px;
+      font-size: 20px;
       color: #333;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      text-transform: uppercase; /* majuscule */
+      text-transform: uppercase;
     }
 
     #weroModalContent span {
@@ -107,48 +107,35 @@
       right: 18px;
       cursor: pointer;
       font-weight: bold;
-      font-size: 24px;
+      font-size: 26px;
     }
 
     #weroModalContent p {
-      margin: 8px 0;
+      margin: 12px 0;
     }
 
     #weroModalContent p strong {
-      font-size: 2em;
+      font-size: 2.2em;
       color: #FF0084;
     }
 
-    /* Responsive mobile */
     @media (max-width: 500px) {
-      body {
-        margin: 60px 15px 40px 15px;
-      }
       h1 {
         font-size: 24px;
-        max-width: 100%;
-        margin-bottom: 15px;
-      }
-      .button-container {
-        max-width: 100%;
-        gap: 30px;
+        margin-top: 140px;
+        line-height: 1.4;
       }
       a.button,
       button.button {
-        font-size: 22px;
-        padding: 20px 0;
-        max-width: 100%;
+        font-size: 24px;
+        padding: 50px 0;
       }
       #weroModalContent {
-        width: 80vw;
-        max-width: none;
-        height: auto;
-        margin: 50px auto;
-        padding: 20px 15px;
-        font-size: 16px;
+        font-size: 18px;
+        height: 320px;
       }
       #weroModalContent p strong {
-        font-size: 1.8em;
+        font-size: 2em;
       }
     }
   </style>
@@ -166,18 +153,17 @@
       class="button"
       href="https://pots.lydia.me/collect/pots?id=93814-linogravure-st-sulpice-en-fete"
       target="_blank"
-      >Lydia</a
-    >
+    >Lydia</a>
+
     <a
       class="button"
       href="https://www.paypal.com/qrcodes/p2pqrc/SAHMXC7PFQMTJ"
       target="_blank"
-      >PayPal</a
-    >
+    >PayPal</a>
+
     <button class="button" onclick="openModal()">Wero</button>
   </div>
 
-  <!-- Fenêtre modale Wero -->
   <div id="weroModal">
     <div id="weroModalContent">
       <span onclick="closeModal()">&times;</span>
