--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cagnotte</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #fdfaf3;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Marcellus', serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -31,11 +31,11 @@
     button.button {
       width: 100%;
       aspect-ratio: 1 / 1; /* carré */
-      border-radius: 20px;
+      border-radius: 25px;
       border: 4px solid #556B2F;
       background-color: transparent;
       color: #556B2F;
-      font-size: 24px;
+      font-size: 2.5em; /* Agrandi le texte */
       font-weight: bold;
       text-transform: uppercase;
       text-align: center;
@@ -45,6 +45,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 20px;
     }
 
     a.button:hover,
@@ -104,7 +105,7 @@
     <button class="button" onclick="openModal()">Wero</button>
   </div>
 
-  <div id="weroModal" style="display: none;">
+  <div id="weroModal">
     <div id="weroModalContent">
       <span onclick="closeModal()">&times;</span>
       Pour les virements Wero,<br />
