--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cagnotte</title>
-  <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #fdfaf3;
-      font-family: 'Marcellus', serif;
+      font-family: 'Prata', serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -30,12 +30,12 @@
     a.button,
     button.button {
       width: 100%;
-      aspect-ratio: 1 / 1; /* carré */
+      aspect-ratio: 1 / 1;
       border-radius: 25px;
-      border: 4px solid #556B2F;
+      border: 5px solid #556B2F;
       background-color: transparent;
       color: #556B2F;
-      font-size: 2.5em; /* Agrandi le texte */
+      font-size: 2.2em; /* ✔ Texte beaucoup plus grand */
       font-weight: bold;
       text-transform: uppercase;
       text-align: center;
@@ -45,7 +45,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 20px;
     }
 
     a.button:hover,
@@ -79,6 +78,7 @@
       color: #333;
       position: relative;
       box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
+      font-family: 'Prata', serif;
     }
 
     #weroModalContent span {
