--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cagnotte</title>
-  <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #fdfaf3;
-      font-family: 'Prata', serif;
+      font-family: 'Marcellus', serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -23,19 +23,17 @@
       flex-direction: column;
       align-items: center;
       gap: 30px;
-      width: 90%;
-      max-width: 400px;
     }
 
     a.button,
     button.button {
-      width: 100%;
-      aspect-ratio: 1 / 1;
+      width: 280px;
+      height: 280px;
       border-radius: 25px;
       border: 5px solid #556B2F;
       background-color: transparent;
       color: #556B2F;
-      font-size: 2.2em; /* ✔ Texte beaucoup plus grand */
+      font-size: 3.2em;
       font-weight: bold;
       text-transform: uppercase;
       text-align: center;
@@ -45,6 +43,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 10px;
+      box-sizing: border-box;
     }
 
     a.button:hover,
@@ -60,7 +60,6 @@
       width: 100%; height: 100%;
       background-color: rgba(0, 0, 0, 0.5);
       z-index: 9999;
-      display: flex;
       justify-content: center;
       align-items: center;
     }
@@ -78,7 +77,6 @@
       color: #333;
       position: relative;
       box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
-      font-family: 'Prata', serif;
     }
 
     #weroModalContent span {
