--- a/Index.html
+++ b/Index.html
@@ -22,18 +22,19 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 30px;
+      gap: 40px;
     }
 
     a.button,
     button.button {
-      width: 280px;
-      height: 280px;
-      border-radius: 25px;
-      border: 5px solid #556B2F;
+      width: 400px;
+      height: 400px;
+      border-radius: 30px;
+      border: 6px solid #556B2F;
       background-color: transparent;
       color: #556B2F;
-      font-size: 3.2em;
+      font-size: 4em;
+      font-family: 'Marcellus', serif;
       font-weight: bold;
       text-transform: uppercase;
       text-align: center;
@@ -65,33 +66,39 @@
     }
 
     #weroModalContent {
-      background: white;
-      padding: 30px;
-      width: 80%;
-      max-width: 320px;
-      border-radius: 20px;
+      background-color: #fdfaf3;
+      width: 85vw;
+      max-width: 500px;
+      height: 500px;
+      border-radius: 30px;
       text-align: center;
-      font-size: 16px;
+      font-size: 1.6em;
+      font-family: 'Marcellus', serif;
+      color: #556B2F;
       font-weight: bold;
       text-transform: uppercase;
-      color: #333;
       position: relative;
-      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
+      padding: 40px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     #weroModalContent span {
       position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 20px;
+      top: 15px;
+      right: 20px;
+      font-size: 28px;
       cursor: pointer;
+      color: #556B2F;
     }
 
     #weroModalContent strong {
-      font-size: 1.8em;
-      color: #556B2F;
+      font-size: 2.2em;
       display: block;
-      margin-top: 15px;
+      margin-top: 20px;
     }
   </style>
 </head>
